# Pong

./: .gitignore  README.md  pyproject.toml  tasks.py  theme.json  users.json
dokumentaatio/: README.md  Vaatimusmäärittely.md  arkkitehtuuri.md  changelog.md  kayttoohje.md  referenssi.md  testaus.md  tuntikirjanpito.md
laskarit/viikko2/: pyproject.toml
src/: README.md  constants.py  index.py  pong_code.py  pongcode.py  pyproject.toml  user_auth.py  users.json
src/service/: __init__.py  ball.py  game.py  objects.py  paddle.py
src/tests/: ball_test.py  paddle_test.py  pyproject.toml  test_login.py
src/ui/: game.py  game_screen.py
