[tool.poetry]
name = "pong"
version = "0.1.0"
description = ""
authors = ["Adam Mohamed <adamluios22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
cowsay = "^6.1"
pygame = "^2.6.1"
invoke = "^2.2.0"
pytest = "^8.3.5"
pylint = "^3.3.6"
autopep8 = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
